--- a/hlava.css
+++ b/hlava.css
@@ -20,6 +20,9 @@ img{
 }
 .odkaz{
     margin-right: 50px;
+    text-decoration: underline;
+    color: black;
+    text-decoration: none;
 }
 
 .icon{
@@ -28,14 +31,32 @@ img{
 }
 
 footer{
-    background-color: aqua;
-    justify-content: space-between ;
-    width: 5 px;
+    display: flex;
+    background-color: rgb(148, 117, 117);
+    justify-content: center ;
+    align-items: center;
+    
 }
 
 .ikon{
     display: flex;
     justify-content: center;
-    
 
+
+}
+
+.test{
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    max-width: 300px;}
+
+.kontakty{
+    display: flex;
+    justify-content: center;
+}
+
+h3{
+    display: flex;
+    justify-content: center;
 }
